# models/Ticket.js
@@ -1,0 +1,28 @@
+import mongoose from 'mongoose';
+
+const ticketSchema = new mongoose.Schema({
+    title: {
+        type: String,
+        required: true
+    },
+    description: {
+        type: String,
+        required: true
+    },
+    status: {
+        type: String,
+        enum: ['Pending', 'Active', 'Monitoring', 'Closed'],
+        default: 'Pending'
+    },
+    customer: {
+        type: mongoose.Schema.Types.ObjectId,
+        ref: 'User'
+    },
+    agent: {
+    type: mongoose.Schema.Types.ObjectId,
+    ref: 'User'
+    },
+}, { timestamps: true });
+
+const Ticket = mongoose.model('Ticket', ticketSchema);
+export default Ticket;
